[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biel_configcat_logging_level"
version = "0.0.1"
authors = [
  { name="biel-huangchunqi", email="huangcq1@bielcrystal.com" },
]
description = "Setting logging level dynamically with ConfigCat"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/BIEL-Datalab/configcat-logging-level"
"Bug Tracker" = "https://github.com/BIEL-Datalab/configcat-logging-level/issues"