[build-system]
requires = [
  "setuptools>=61.0",
  "certifi==2022.6.15",
  "charset-normalizer==2.1.0",
  "configcat-client==6.0.3",
  "enum-compat==0.0.3",
  "idna==3.3",
  "pydantic==1.9.1",
  "requests==2.28.1",
  "semver==2.13.0",
  "typing_extensions==4.3.0",
  "urllib3==1.26.10"
]
build-backend = "setuptools.build_meta"

[project]
name = "configcat_logging_level"
version = "0.0.1"
authors = [
  { name="biel-huangchunqi", email="huangcq1@bielcrystal.com" },
]
description = "Setting logging level dynamically with ConfigCat"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
]

[project.urls]
"Homepage" = "https://github.com/BIEL-Datalab/configcat-logging-level"
"Bug Tracker" = "https://github.com/BIEL-Datalab/configcat-logging-level/issues"